--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron ."
+    "dist": "electron-builder --publish=never"
   },
   "devDependencies": {
     "electron": "^25.2.0"
