--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
   "name": "modern-night-mode-timer",
   "version": "1.0.0",
-  "description": "Electron app for Modern Night Mode Timer",
+  "description": "A simple always‑on‑top night‑mode timer built with Electron",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "dist": "electron-builder --publish=never"
   },
-
   "devDependencies": {
-    "electron": "^25.2.0"
-  }
+    "electron": "^25.2.0",
+    "electron-builder": "^24.8.0"
+  },
+  "build": {
+    "appId": "com.yourdomain.modern-night-mode-timer",
+    "productName": "Modern Night Mode Timer",
+    "files": [
+      "**/*"
+    ],
+    "win": {
+      "target": "zip"
+    },
+    "mac": {
+      "target": "dmg"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    }
+  },
+  "license": "MIT"
 }
