--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modern-night-mode-timer",
+  "name": "timer",
   "version": "1.0.0",
   "description": "A simple always‑on‑top night‑mode timer built with Electron",
   "author": "Sterling <your-email@example.com>",
@@ -14,7 +14,7 @@
   },
   "build": {
     "appId": "com.yourdomain.modern-night-mode-timer",
-    "productName": "Modern Night Mode Timer",
+    "productName": "Timer",
     "files": [
       "**/*"
     ],
